src/styles/header.css
:root {
  --color-red: #ad0101;
}

#cart-icon {
  width: 27px;
}

.cart-container {
  width: 30%;
}

.header-links {
  text-decoration: none;
}

.navbar {
  background-color: #ffffff;
}

.nav-links {
  width: 30%;
}

.navbar-toggler {
  border: none;
  padding: 0px;
}
.navbar .order-now {
  border-radius: 0% !important;
  font-size: 1rem;
  background-color: var(--color-red);
}

.logo {
  font-family: Georgia, 'Times New Roman', Times, serif;
  font-weight: 900;
  color: var(--color-red);
}

.navbar-nav a {
  color: #000000 !important;
  font-weight: 500;
}

.container-fluid {
  display: flex;
  flex-direction: row-reverse;
}

@media (max-width: 430px) {
  .navbar .order-now {
    font-size: 0.9rem;
  }

  a {
    margin-top: 7px;
  }

  #logo {
    width: 9rem;
  }
}

@media (max-width: 767px) {
  .container-fluid {
    flex-direction: row;
  }

  .header-order .container-fluid:nth-child(2) {
    order: 3;
  }
  .header-order .container-fluid:nth-child(3) {
    order: 2;
  }
}

@media (max-width: 428px) {
  .container-fluid .btn.order-now {
    display: none;
  }
}

